--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -23,6 +23,10 @@ production stylesheet in assets/built/screen.css using: gulp dev
 @import "ghost/footer.css";
 @import "ghost/badge.css";
 
+/* Tailwind - add this part */
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 
 /* Main - Your styles here! Edit below
